--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -159,3 +159,12 @@
         @apply bg-background text-foreground;
     }
 }
+
+.scrollbar-hidden {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+}
